# HybridWeave

./: .gitignore  CMakeLists.txt  LICENSE  README.md  THIRD_PARTY_NOTICES.md  main.cpp
assets/pointclouds/: README.txt
assets/shaders/: automatch_ring.comp  blurmap_build.comp  brdf_lut.comp  calibrate.comp  common.glsl  composite_frag.frag  equirect_to_cubemap.comp  fullscreen_vert.vert  gbuffer_frag.frag  gbuffer_vert.vert  gltf_frag.frag  gltf_vert.vert  ibl_env_frag.frag  ibl_env_vert.vert  irradiance_convolution.comp  lighting_frag.frag  lighting_vert.vert  lut_init.comp  mesh_depth_tile.comp  prefilter_env.comp  prefilter_sheen_env.comp  preprocess.comp  preprocess_mix.comp  present_frag.frag  present_mix.frag  present_mix_enhance.frag  render.comp  render_mix.comp  sheen_lut.comp  stats_downsample.comp  taa.comp
frameworks/: 3dgs.cpp  3dgs.h  Buffer.cpp  Buffer.h  CMakeLists.txt  Camera.cpp  Camera.h  ComputePipeline.cpp  ComputePipeline.h  DescriptorSet.cpp  DescriptorSet.h  GLFWWindow.cpp  GLFWWindow.h  GSScene.cpp  GSScene.h  GltfLoader.cpp  GltfLoader.h  GltfRenderPass.cpp  GltfRenderPass.h  GraphicsPipeline.cpp  GraphicsPipeline.h  GsMixRenderPass.cpp  GsMixRenderPass.h  GsRenderPass.cpp  GsRenderPass.h  IColorProvider.h  IDepthProvider.h  IGBufferProvider.h  IRenderPass.h  IblEnvPass.cpp  IblEnvPass.h  Image.h  LightingPass.cpp  LightingPass.h  Pipeline.cpp  Pipeline.h  PresentPass.cpp  PresentPass.h  QueryManager.cpp  QueryManager.h  (+16 more)
